--- a/styles/typography.scss
+++ b/styles/typography.scss
@@ -56,10 +56,22 @@
   line-height: 6rem;
 }
 
+@mixin t--x-small-responsive {
+  font-family: nittigrotesk-black;
+  font-size: 7rem;
+  line-height: 8.5rem;
+}
+
 @mixin t--x-small {
   font-family: nittigrotesk-black;
   font-size: 4.5rem;
   line-height: 6rem;
+}
+
+@mixin t--body-responsive {
+  font-family: nittigrotesk-normal;
+  font-size: 6rem;
+  line-height: 7.5rem;
 }
 
 @mixin t--body {
